my resume change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Surya S Nath Online Resume</title> 
+  <title>Surya S  Nath Online Resume</title> 
   <link href="css/style.css" rel="stylesheet">
   <script src="js/jQuery.js"></script>
   <!-- More on helper.js in the class -->
@@ -85,9 +85,9 @@
   if(document.getElementsByClassName("flex-item").length === 0) {
     document.getElementById("letsConnect").style.display = "none";
   }
-  if(document.getElementById("map") == undefined) {
-    document.getElementById("mapDiv").style.display = "none";
-  }
+  //if(document.getElementById("map") == undefined) {
+   // document.getElementById("mapDiv").style.display = "none";
+ // }
   </script>
   
   <script> 
